<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_width="20dp"
            android:layout_height="30dp"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/a"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/b"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/c"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/d"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/e"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/f"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="20dp"
            android:layout_height="45dp"
            android:text="6"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="20dp"
            android:layout_height="45dp"
            android:text="5"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="20dp"
            android:layout_height="45dp"
            android:text="4"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="20dp"
            android:layout_height="45dp"
            android:text="3"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="20dp"
            android:layout_height="45dp"
            android:text="2"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="20dp"
            android:layout_height="45dp"
            android:text="1"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/black"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_width="20dp"
            android:layout_height="30dp"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/a"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/b"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/c"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/d"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/e"/>
        <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/f"/>
    </LinearLayout>
</LinearLayout>